# fractalzoomer

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  uncloud.yml
.github/workflows/: docker-build.yml
src/: colour.rs  coordinator.rs  main.rs  mandelbrot.rs  messages.rs  worker.rs
static/: app.js  index.html  style.css
